# raytracer-old

./: .gitignore  CMakeLists.txt  README.md
include/ray/: img_utils.h  intersect.h  light.h  loader.h  material.h  normal.h  objects.h  ray.h  render.h  scene.h  tex_coord.h  vec_utils.h
src/: CMakeLists.txt  color.h  img_utils.c  img_utils.h  intersect.c  light.c  loader.c  main.c  material.c  normal.c  objects.c  objects.h  ray.c  render.c  scene.c  tex_coord.c  vec_utils.c
tests/: CMakeLists.txt  cross_test.c  image_test.c  loader_test.c  scene.json  scene_test.c
